--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-	compile 'org.codehaus.groovy:groovy-all:2.1.0'
+	groovy 'org.codehaus.groovy:groovy-all:2.0.0'
 	testCompile 'xmlunit:xmlunit:1.3'
 	testCompile 'junit:junit:4.11'
 }
