added settings.gradle to define projectname set version in build.gradle
git-svn-id: svn://svn.code.sf.net/p/groovytools/code/trunk/MetaBuilder/trunk@76 8f5b34bb-663e-0410-9401-d0fa380fce8b

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 
-
 repositories {
 	mavenCentral()
 }
@@ -12,6 +11,9 @@ dependencies {
 	testCompile 'xmlunit:xmlunit:1.3'
 	testCompile 'junit:junit:4.11'
 }
+
+
+version = '2.0.0-SNAPSHOT'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.3'
