--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	groovy 'org.codehaus.groovy:groovy-all:2.1.0'
 	testCompile 'xmlunit:xmlunit:1.3'
 	testCompile 'junit:junit:4.11'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
 
