--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,21 @@ group = 'groovytools.builder'
 version = '2.0.0-SNAPSHOT'
 //default artifact name is defined in settings.gradle  
 
-defaultTasks('build')
+defaultTasks('check')
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.4'
+task sourcesJar(type: Jar, dependsOn: classes) {
+	classifier = 'sources'
+	from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+	classifier = 'javadoc'
+	from javadoc.destinationDir
+}
+
+artifacts {
+	archives sourcesJar
+	archives javadocJar
 }
 
 task writePom {
@@ -33,4 +44,10 @@ task writePom {
 
 afterEvaluate {
 	 getTasksByName('jar', false)*.dependsOn('writePom')
+}
+
+
+//just needed to create or update the gradlew wrapper, irrelevant for the build otherwise
+task wrapper(type: Wrapper) {
+	gradleVersion = '1.4'
 }
