--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@ apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'idea'
 
+
+configurations { deployerJars }
+
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
@@ -12,14 +16,25 @@ dependencies {
 	testCompile 'xmlunit:xmlunit:1.3'
 	testCompile 'junit:junit:4.11'
 	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+
+	deployerJars 'org.apache.maven.wagon:wagon-webdav-jackrabbit:2.4'
 }
 
 // MetaInfo
 group = 'groovytools.builder'
-version = '2.0.0-SNAPSHOT'
-//default artifact name is defined in settings.gradle  
+def versionBase = '2.0.0'
+//default artifact name is defined in settings.gradle
 
 defaultTasks('check')
+
+// handles releases gracefully
+gradle.taskGraph.whenReady {taskGraph ->
+	if (taskGraph.hasTask(':release')) {
+		version = versionBase
+	} else {
+		version = versionBase + '-SNAPSHOT'
+	}
+}
 
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = 'sources'
@@ -44,11 +59,28 @@ task writePom {
 }
 
 afterEvaluate {
-	 getTasksByName('jar', false)*.dependsOn('writePom')
+	getTasksByName('jar', false)*.dependsOn('writePom')
+}
+
+
+def cloudbeesUsername = System.getProperty("CLOUDBEES_JENKINS_USER")
+def cloudbeesPassword = System.getProperty("CLOUDBEES_JENKINS_PASSWORD")
+def cloudbeesAccountName = System.getProperty("CLOUDBEES_JENKINS_ACCOUNT")
+
+uploadArchives {
+	repositories.mavenDeployer {
+		// you might use this configuration not to generate
+		// date based artefact names
+		// uniqueVersion = false
+		def configureAuth = {
+			authentication(userName: cloudbeesUsername, password: cloudbeesPassword)
+		}
+		configuration = configurations.deployerJars
+		snapshotRepository(url: "dav:https://repository-${cloudbeesAccountName}.forge.cloudbees.com/snapshot/", configureAuth)
+		repository(url: "dav:https://repository-${cloudbeesAccountName}.forge.cloudbees.com/release/", configureAuth)
+	}
 }
 
 
 //just needed to create or update the gradlew wrapper, irrelevant for the build otherwise
-task wrapper(type: Wrapper) {
-	gradleVersion = '1.4'
-}
+task wrapper(type: Wrapper) { gradleVersion = '1.4' }
