--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	testCompile 'junit:junit:4.11'
 	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 
-	deployerJars 'org.apache.maven.wagon:wagon-webdav-jackrabbit:2.4'
+	deployerJars 'org.apache.maven.wagon:wagon-webdav:1.0-beta-2'
 }
 
 // MetaInfo
@@ -80,7 +80,6 @@ uploadArchives {
 		repository(url: "dav:https://repository-${cloudbeesAccountName}.forge.cloudbees.com/release/", configureAuth)
 	}
 }
-
 
 //just needed to create or update the gradlew wrapper, irrelevant for the build otherwise
 task wrapper(type: Wrapper) { gradleVersion = '1.4' }
