fixed reading environment variables
git-svn-id: svn://svn.code.sf.net/p/groovytools/code/trunk/MetaBuilder/trunk@96 8f5b34bb-663e-0410-9401-d0fa380fce8b

--- a/build.gradle
+++ b/build.gradle
@@ -62,10 +62,10 @@ afterEvaluate {
 	getTasksByName('jar', false)*.dependsOn('writePom')
 }
 
-
-def cloudbeesUsername = System.getProperty("CLOUDBEES_JENKINS_USER")
-def cloudbeesPassword = System.getProperty("CLOUDBEES_JENKINS_PASSWORD")
-def cloudbeesAccountName = System.getProperty("CLOUDBEES_JENKINS_ACCOUNT")
+def env = System.getenv()
+def cloudbeesUsername = env['CLOUDBEES_JENKINS_USER']
+def cloudbeesPassword = env['CLOUDBEES_JENKINS_PASSWORD']
+def cloudbeesAccountName = env['CLOUDBEES_JENKINS_ACCOUNT']
 
 uploadArchives {
 	repositories.mavenDeployer {
