Set   sourceCompatibility = 1.6   targetCompatibility = 1.6
git-svn-id: svn://svn.code.sf.net/p/groovytools/code/trunk/MetaBuilder/trunk@102 8f5b34bb-663e-0410-9401-d0fa380fce8b

--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,15 @@ dependencies {
 
 // MetaInfo
 group = 'groovytools.builder'
-def versionBase = '2.1.0'
+def versionBase = '2.0.1'
 //default artifact name is defined in settings.gradle
 
 defaultTasks('check')
+
+compileJava {
+  sourceCompatibility = 1.6
+  targetCompatibility = 1.6
+}
 
 // handles releases gracefully
 gradle.taskGraph.whenReady {taskGraph ->
