removed invalid "import java.lang.invoke.MethodHandleImpl.BindCaller.T" set minor version to 2.0.3
git-svn-id: svn://svn.code.sf.net/p/groovytools/code/trunk/MetaBuilder/trunk@107 8f5b34bb-663e-0410-9401-d0fa380fce8b

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 // MetaInfo
 group = 'groovytools.builder'
-def versionBase = '2.1.0'
+def versionBase = '2.0.3'
 //default artifact name is defined in settings.gradle
 
 defaultTasks('check')
@@ -31,6 +31,8 @@ compileJava {
   sourceCompatibility = 1.6
   targetCompatibility = 1.6
 }
+
+println "Java Version ${System.getProperty('java.version')}"
 
 // handles releases gracefully
 gradle.taskGraph.whenReady {taskGraph ->
